assets/styles/style.css
/* ... */
.industry-circle-wrapper:nth-child(5)>.industry-circle {
  background: var(--clr-2-a);
  transform: rotate(-240deg);
  box-shadow: inset -4px 4px 4px #fff4,
              inset 2px -2px 4px #0002,
              -3px 3px var(--clr-2-c);
  animation: circle-name-rotate-5 30s linear infinite;
  filter: drop-shadow(4px 4px #0080f080) drop-shadow(8px 8px #0080f040);
}

.industry-circle-wrapper:nth-child(6)>.industry-circle {
  background: var(--clr-6-a);
  transform: rotate(-300deg);
  box-shadow: inset -4px 4px 4px #fff4,
              inset 2px -2px 4px #0002,
              -3px 3px var(--clr-6-c);
  animation: circle-name-rotate-6 30s linear infinite;
  filter: drop-shadow(4px 4px #80808080) drop-shadow(8px 8px #80808040);
}

.industry-circle>h2 {
  font-weight: 400;
  text-align: center;
  width: 100%;
  color: var(--white-1);
  text-shadow: -2px 2px var(--white-6);
  font-size: 24px;
}

.industry-circle-wrapper:nth-child(1)>.industry-circle > h2 {
  font-size: 22px;
}

.industry-circle::before {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 30%;
  aspect-ratio: 1;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 50%;
  font-size: 24px;
  font-family: 'Oswald Bold', sans-serif;
  color: white;
  text-shadow: -2px 2px #0004;
  box-shadow: -1px 4px #0003;
}

.industry-circle-wrapper:nth-child(1)>.industry-circle::before {
  content: '1';
  background: var(--clr-3-b);
}

.industry-circle-wrapper:nth-child(2)>.industry-circle::before {
  content: '2';
  background: var(--clr-4-b);
}

.industry-circle-wrapper:nth-child(3)>.industry-circle::before {
  content: '3';
  background: var(--clr-5-b);
}

.industry-circle-wrapper:nth-child(4)>.industry-circle::before {
  content: '4';
  background: var(--clr-1-b);
}

.industry-circle-wrapper:nth-child(5)>.industry-circle::before {
  content: '5';
  background: var(--clr-2-b);
}

.industry-circle-wrapper:nth-child(6)>.industry-circle::before {
  content: '6';
  background: var(--clr-6-b);
}

.industry-list {
  display: none;
  flex-direction: column;
  gap: 16px;
  width: 100%;
  max-width: 384px;
}

.industry-list > h2 {
  background: var(--brown-1);
  text-align: center;
  color: var(--white-1);
  padding-block: 8px;
  padding-inline: 16px;
  border-radius: 8px;
  font-size: 30;
  filter: drop-shadow(-3px 3px #2b2b2b80) drop-shadow(-6px 6px #2b2b2b40);
  text-shadow: -2px 2px #fff2;
}

.industry-list > h2,
.industry-items > li {
  box-shadow: inset -4px 4px 4px #fff2,
              inset 2px -2px 4px #0002;
  transform-origin: left;
  transition: all 0.2s ease-in-out;
}

.industry-list > h2:hover,
.industry-items > li:hover {
  transform: scale(1.05);
}

.industry-items {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.industry-items > li {
  padding-block: 8px;
  padding-inline: 16px;
  background: white;
  margin-left: 54px;
  border-radius: 8px;
  text-shadow: -2px 2px #0003;
  position: relative;
}

.industry-items > li::before {
  position: absolute;
  height: 100%;
  aspect-ratio: 1;
  background: inherit;
  top: 0;
  left: -54px;
  border-radius: 8px;
  box-shadow: inherit;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 20px;
  font-family: 'Oswald Bold';
  color: var(--white-1);
  transform-origin: left;
}

.industry-items > li > h2 {
  font-size: 20px;
  color: white;
}

.industry-items > li:nth-child(1) {
  background: var(--clr-3-a);
  filter: drop-shadow(-3px 3px #2cd89680) drop-shadow(-6px 6px #2cd89640);
}

.industry-items > li:nth-child(1)::before {
  content: '1';
}

.industry-items > li:nth-child(2) {
  background: var(--clr-4-a);
  filter: drop-shadow(-3px 3px #ffd50080) drop-shadow(-6px 6px #ffd50040);
}

.industry-items > li:nth-child(2)::before {
  content: '2';
}

.industry-items > li:nth-child(3) {
  background: var(--clr-5-a);
  filter: drop-shadow(-3px 3px #ff880080) drop-shadow(-6px 6px #ff880040);
}

.industry-items > li:nth-child(3)::before {
  content: '3';
}

.industry-items > li:nth-child(4) {
  background: var(--clr-1-a);
  filter: drop-shadow(-3px 3px #8480ff80) drop-shadow(-6px 6px #8480ff40);
}

.industry-items > li:nth-child(4)::before {
  content: '4';
}

.industry-items > li:nth-child(5) {
  background: var(--clr-2-a);
  filter: drop-shadow(-3px 3px #2499ff80) drop-shadow(-6px 6px #2499ff40);
}

.industry-items > li:nth-child(5)::before {
  content: '5';
}

.industry-items > li:nth-child(6) {
  background: var(--clr-6-a);
  filter: drop-shadow(-3px 3px #b0b0b080) drop-shadow(-6px 6px #b0b0b040);
}

.industry-items > li:nth-child(6)::before {
  content: '6';
}

.industry-ctn {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  padding: 32px;
  max-width: 1080px;
  gap: 160px;
}

.industry-card-wrapper {
  width: 100%;
  position: relative;
  transition: all .75s ease-in-out;
  transition-delay: .125s;
}

.industry-card {
  max-width: 928px;
  margin-inline: auto;
  display: grid;
  column-gap: 32px;
  place-items: center;
  row-gap: 32px;
}

.industry-card-wrapper:nth-child(odd) > .industry-card {
  grid-template-areas: "i c";
}

.industry-card-wrapper:nth-child(even) > .industry-card {
  grid-template-areas: "c i";
}

.industry-card-content-ctn {
  width: 100%;
  grid-area: c;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.industry-card-content-ctn > h2 {
  display: flex;
  width: max-content;
  padding-inline: 32px;
  padding-block: 8px;
  font-size: 24px;
  color: var(--white-1);
  text-shadow: -3px 2px #0004;
  box-shadow: inset 4px 4px 4px #fff4,
              inset -2px -2px 2px #0002;
}

.industry-card-content-ctn > ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 16px;
}
/* ... */

